# telegram-chat-summarizer

./: .env.dist  .gitignore  README.md  docker-compose.yml  pyproject.toml  telegram_bot.py
app/: config.py  constants.py  database.py  endpoints.py  loader.py  main.py  models.py  schema.py  security.py
app/services/: logging.py  openai.py  prompt.py  summarization.py  telegram.py
app/templates/: edit_prompt.html  index.html
